# seda

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README.rst  modification_history.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: about_seda.rst  api.rst  available_models.rst  conf.py  index.rst  installation.rst  overview.rst  requirements.txt  tutorials.rst
docs/joss/: paper.bib  paper.md
docs/notebooks/: test_SEDA_chi2.ipynb  test_bayes_fit.ipynb  test_chi2_fit.ipynb  test_models_examination.ipynb  test_synthetic_photometry.ipynb  tutorial_bayes_fit.ipynb  tutorial_bayes_fit_multiple_spectra.ipynb  tutorial_bayes_fit_photometry_only.ipynb  tutorial_bayes_fit_single_spectrum.ipynb  tutorial_bayes_fit_spectrophotometry.ipynb  tutorial_bolometric_luminosity.ipynb  tutorial_chi2_fit.ipynb  tutorial_chi2_fit_multiple_spectra.ipynb  tutorial_chi2_fit_photometry_only.ipynb  tutorial_chi2_fit_single_spectrum.ipynb  tutorial_chi2_fit_spectrophotometry.ipynb  tutorial_chi2_photometry_only.ipynb  tutorial_index_measurements.ipynb  tutorial_ingest_new_models.ipynb  tutorial_interpolate_model_grid.ipynb  tutorial_models_examination.ipynb  tutorial_spectral_indices.ipynb  tutorial_spitzer_irs_spectra.ipynb  tutorial_synthetic_photometry.ipynb  tutorial_variability.ipynb
docs/source/: conf.py  index.rst  tutorials.rst  usage.rst
docs/source/tutorials/: test_SEDA_chi2.ipynb
docs/source/user/: api.rst  tutorials.rst
seda/: LICENSE.md  __init__.py  archival_data.py  bayes_fit.py  chi2_fit.py  chi2_fit_old.py  input_parameters.py  interpol_model.py  models.py  modification_history.txt  phy_params.py  plots.py  seda_bayes.py  seda_chi2.py  seda_plots.py  seda_utils.py  utils.py  variability.py
seda/aux/: ATMO2020_free_parameters.pickle  SM08_free_parameters.pickle  Sonora_Bobcat_free_parameters.pickle  kk.csv
seda/aux/model_coverage/: BT-Settl_free_parameters.pickle  LB23_free_parameters.pickle  Sonora_Cholla_free_parameters.pickle  Sonora_Diamondback_free_parameters.pickle
seda/aux/model_spectra/: README
seda/models_aux/: _plugin_helpers.py  aux_info
seda/models_aux/ATMO2020/: config.json  coverage.pickle  plugin.py  spec_T1000_lg4.0_NEQ_weak.txt
seda/models_aux/BT-Settl/: config.json  coverage.pickle  plugin.py
seda/models_aux/LB23/: config.json  plugin.py
seda/models_aux/LOWZ/: LOW_Z_BD_GRID_CLEAR_Teff_1000.0_logg_3.5_logZ_+0.0_CtoO_0.1_logKzz_-1.0_spec.txt  config.json  coverage.pickle  plugin.py
seda/models_aux/SAND/: SAND_z-0.15_a-0.05_t1000_g4.0_silver.fits  config.json  coverage.pickle  plugin.py
seda/models_aux/SM08/: config.json  coverage.pickle  plugin.py
seda/models_aux/Sonora_Bobcat/: config.json  plugin.py
seda/models_aux/Sonora_Cholla/: config.json  plugin.py
seda/models_aux/Sonora_Diamondback/: config.json  coverage.pickle  plugin.py
seda/models_aux/Sonora_Elf_Owl/: config.json  plugin.py
seda/models_aux/model_coverage/: LB23_free_parameters.pickle  Sonora_Bobcat_free_parameters.pickle  Sonora_Cholla_free_parameters.pickle
seda/models_aux/model_specifics/: ATMO2020_models.json  BT-Settl_models.json  LB23_models.json  SM08_models.json  Sonora_Bobcat_models.json  Sonora_Cholla_models.json  Sonora_Diamondback_models.json  Sonora_Elf_Owl_models.json  template_models.json
seda/models_aux/model_spectra/: 1000K_1000g_logkzz2.spec  README  spectra_logzz_4.0_teff_1200.0_grav_1000.0_mh_0.0_co_0.5.nc
seda/observations_aux/: .Suarez_Metchev_2022_tables.dat.swp
seda/spectral_indices/: spectral_indices.py
seda/spectral_indices/aux/tmp/: test.ipynb
seda/spectral_indices/aux/tmp/.ipynb_checkpoints/: test-checkpoint.ipynb
seda/synthetic_photometry/: README.md  synthetic_photometry.py
seda/synthetic_photometry/tmp/: Untitled.ipynb  Untitled1.ipynb  filters_properties
seda/synthetic_photometry/tmp/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
seda/variability/: __init__.py  variability.py
tests/: conftest.py  test_chi2.py  test_chi2_fit_single_spec.py  test_empirical.py  test_import.py  test_load_data.py  test_model.py  test_models.py  test_utils.py
