[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seda"
description = "SEDA: Spectral Energy Distribution Analyzer for forward modeling and empirical analyses of ultracool objects"
readme = "README.md"
# Use dynamic version from `seda/_version.py`
dynamic = ["version"]
keywords = [
  "ultracool objects", "low mass stars", "brown dwarfs", "gas giant planets",
  "spectroscopy", "photometry", "atmospheres", "astronomy", "astrophysics"
]
authors = [{ name = "Genaro Suárez", email = "gsuarez2405@gmail.com" }]
license = { expression = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "astropy",
  "corner",
  "dynesty",
  "lmfit",
  "matplotlib",
  "numpy",
  "prettytable",
  "scipy",
  "specutils",
  "spectres",
  "tqdm",
  "xarray",
]

[project.optional-dependencies]
docs = [
  "sphinx==7.1.2",
  "sphinx-rtd-theme==1.3.0rc1",
  "jupyter",
  "nbsphinx",
]

[project.urls]
Homepage = "https://github.com/suarezgenaro/seda"

[tool.setuptools.license]
license-files = ["LICENSE"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "seda._version.__version__" }

[tool.setuptools.packages.find]
# Discover the top-level package and its submodules
include = ["seda", "seda.*"]

[tool.setuptools.package-data]
# Mirror setup.py's package_data config
seda = [
  "models_aux/model_coverage/*",
  "models_aux/model_specifics/*",
  "models_aux/model_spectra/*",
]
