[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seda"
description = "SEDA: Spectral Energy Distribution Analyzer for forward modeling and empirical analysis of ultracool objects"
readme = "README.md"
# Use dynamic version from setuptools-scm (written to seda/_version.py)
dynamic = ["version"]
keywords = [
  "ultracool objects", "low mass stars", "brown dwarfs", "gas giant planets",
  "spectroscopy", "photometry", "atmospheres", "astronomy", "astrophysics"
]
authors = [{ name = "Genaro Suárez", email = "gsuarez2405@gmail.com" }]
license = {file = "LICENSE"}
requires-python = ">=3.9, <=3.14"
dependencies = [
  "astropy",
  "corner",
  "dynesty",
  "lmfit",
  "matplotlib",
  "numpy",
  "prettytable",
  "scipy",
  "specutils",
  "spectres",
  "tqdm",
  "xarray",
]

[project.optional-dependencies]
docs = [
  "sphinx==7.1.2",
  "sphinx-rtd-theme>=1.3.0",
  "jupyter",
  "nbsphinx",
]

[project.urls]
Homepage = "https://github.com/suarezgenaro/seda"

[tool.setuptools_scm]
write_to = "seda/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# Mirror setup.py's package_data config
seda = [
  "models_aux/model_coverage/*",
  "models_aux/model_specifics/*",
  "models_aux/model_spectra/*",
  "models_aux/*.pickle",
]

[tool.setuptools.packages.find]
include = ["seda*"]
exclude = ["backups*"]
